# Rust-Database

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Description_of_the_Project.docx  README.md  docker-compose.yml
2nd_Project/: Cargo.toml
client/: Cargo.toml
client/src/: functions.rs  lib.rs  main.rs
core/: Cargo.toml
core/src/: client_functions.rs  column.rs  entry.rs  lib.rs  request_types.rs  row.rs  table.rs  value.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
sql_parser_client/: Cargo.toml
sql_parser_client/src/: main.rs
