[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "1.9", features = ["serde-1"] }  # Ajout des fonctionnalités de sérialisation pour indexmap
csv = "1.1"
winapi = { version = "0.3", features = ["psapi", "winbase", "handleapi"] }
once_cell = "1.8.0" 



