[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.5"

[features]
doc_examples = []